<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/your_device_name" />

    <TextView
        android:id="@+id/text_view_manufacturer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/manufacturer"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_view_status_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:text="@string/status_connection_s" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear_layout_container_not_connected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/button_create_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_room" />

            <Button
                android:id="@+id/button_discovery_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discovery_room" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_container_reset_connection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <Button
                android:id="@+id/button_reset_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_connection" />

        </LinearLayout>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/devices"
        android:textSize="16sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_devices"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>